--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,7 +76,7 @@ html{
 }
 #home::before{
     content: "";
-    background: url(/image/piza-3010062_1920.jpg) no-repeat center center/cover ;
+    background: url('../image/piza-3010062_1920.jpg') no-repeat center center/cover ;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -164,7 +164,7 @@ html{
 #client-section::before{
     content: "";
     position: absolute;
-    background: url('/image/cake-1227842_1280.jpg');
+    background: url('../image/cake-1227842_1280.jpg');
     width: 100%;
     height: 37%;
     z-index: -1;
@@ -182,7 +182,7 @@ html{
     margin:35px 0px;
     z-index: -1;
     opacity: 0.7;
-    background: url('/image/contact-us-2993000_1920.jpg') no-repeat center center/cover;
+    background: url('../image/contact-us-2993000_1920.jpg') no-repeat center center/cover;
 
 }
 #contact-box{
