--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,7 +21,7 @@ html{
 }
 #navbar::before{
     content: "";
-    background-color: black;
+    background-color:#7b7474;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -62,6 +62,7 @@ html{
 
     color:black;
     background-color: white;
+    opacity: 0.8;
 
 }
 /* Home section */
@@ -70,13 +71,13 @@ html{
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
-    height: 490px;
+    height: 435px;
     justify-content: center;
     align-items: center;
 }
 #home::before{
     content: "";
-    background: url('../image/piza-3010062_1920.jpg') no-repeat center center/cover ;
+    background: url('../piza-3010062_1920.jpg') no-repeat center center/cover ;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -88,38 +89,41 @@ html{
 #home h1{
     color: white;
     text-align: center;
-    font-family: cursive;
+    font-family: 'Montserrat', sans-serif;
 }
 #home p{
     color: white;
     text-align: center;
-    font-size: 1.8rem;
-    font-family: cursive;
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
 }
 .h-primary{
-    font-size: 2.5rem;
-    padding: 25px;
-    font-family: cursive;
+    font-size: 3.0rem;
+    padding: 35px;
+    font-family: 'Montserrat', sans-serif;
 }
 .h-secondary{
-    font-family: cursive;
+    font-family: 'Montserrat', sans-serif;
     font-size: 2.3rem;
     padding: 12px;
 }
 .btn{
     padding: 10px;
-    border: 3px solid white;
+    border: 1px solid white;
     background-color: brown;
-    font-family: cursive;
+    font-family: 'Montserrat', sans-serif;
     color: white;
-    border-radius: 25px;
+    border-radius: 15px;
     font-size: 1.2rem;
     cursor: pointer;
+    margin: 25px;
+    opacity: 0.8;
 
 }
 
 .center{
     text-align: center;
+    font-family: 'Montserrat', sans-serif; 
 }
 
 /* services */
@@ -134,11 +138,11 @@ html{
 
 } 
 #services .box{
-    border: 2px solid #8d3b3b;
+    border: 1px solid #8d3b3b;
     padding: 23px;
     border-radius: 33px;
     margin: 3px 6px;
-    background-color:#fce4e4;
+    background-color: #fef1f1;
 }
 #services .box img{
     height: 160px;
@@ -164,11 +168,11 @@ html{
 #client-section::before{
     content: "";
     position: absolute;
-    background: url('../image/cake-1227842_1280.jpg');
+    background: url('../architecture-2256489_1920.jpg');
     width: 100%;
-    height: 37%;
+    height: 36%;
     z-index: -1;
-    opacity: 0.8;
+    opacity: 0.5;
    }
    /* contact */
    #contact{
@@ -181,8 +185,8 @@ html{
     height: 99%;
     margin:35px 0px;
     z-index: -1;
-    opacity: 0.7;
-    background: url('../image/contact-us-2993000_1920.jpg') no-repeat center center/cover;
+    opacity: 1;
+    background: url('../paper-3316268_1920.jpg') no-repeat center center/cover;
 
 }
 #contact-box{
@@ -196,6 +200,7 @@ html{
     padding: 0.5rem;
     border-radius: 9px;
     font-size: 1.1rem;
+    font-family: 'Montserrat', sans-serif ;
 } 
 
 #contact-box form{
@@ -204,12 +209,36 @@ html{
 
 #contact-box label{
    font-size: 1.3rem;
-   font-family: cursive;
+   font-family: 'Montserrat', sans-serif ;
 
 }
 footer{
     background-color: black;
     color: white;
     padding: 0px 0px;
-    margin: 35px 0px;
+    margin: 22px 0px;
+}
+
+/* others */
+
+/* our services id  */
+
+/* #ser{
+    margin: 1px;
+    padding: 1px;
+} */
+
+
+
+.btnx{
+    padding: 10px;
+    border: 1px solid white;
+    background-color:black;
+    font-family: 'Montserrat', sans-serif;  
+    color: white;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    opacity: 0.9;
+
 }
